opam-version: "2.0"
version: "0.0.0"
synopsis: "Synopsis"
description: "A longer description"
maintainer: "maintainer"
authors: "author"
license: "LicenseRef-yourlicense"
homepage: "homepage"
bug-reports: "bugreports"
depends: [
  "ocaml" {>= "4.02"}
  "dune"
  "bencode"
  "digestif"
  "miou"
  "httpcats"
  "mirage-crypto-rng"
  "ipaddr"
  "uri"
]
pin-depends: [
  ["httpcats.dev" "git+https://github.com/robur-coop/httpcats"]
  ["miou.dev" "git+https://github.com/robur-coop/miou"]
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/your-org/your-project"
